crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__variable__undefined_global.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/undefined_global.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: Undefined variable `notDefined`.
   ╭─[craftinginterpreters/test/variable/undefined_global.lox:1:7]
   │
 1 │ print notDefined;  // expect runtime error: Undefined variable 'notDefined'.
   │       ──────────  
───╯
