crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__variable__use_false_as_var.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/use_false_as_var.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: at `false`: expected Identifier
   ╭─[craftinginterpreters/test/variable/use_false_as_var.lox:2:5]
   │
 2 │ var false = "value";
   │     ─────  
───╯
