crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__variable__use_nil_as_var.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/use_nil_as_var.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
[line 2] Error at 'nil': Expect variable name.
